Fix: align the practice footer

--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -58,10 +58,10 @@
       float: right !important;
     }
     .text-footer-r {
-      text-align: center;
+      text-align: right;
     }
     .text-footer-l {
-      text-align: center;
+      text-align: left;
     }
     .row {
       margin-left: 10px;
